--- a/chrome/src/styles/app.css
+++ b/chrome/src/styles/app.css
@@ -4,7 +4,8 @@
     left: 0;
 }
 
-#dc-instruction {
+#dc-keybindings {
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
     position: fixed;
     bottom: 5px;
     right: 12px;
@@ -12,4 +13,29 @@
     color: #777;
     z-index: 9999999;
     cursor: pointer;
+    width: 160px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dc-key-action {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dc-key {
+    margin-left: 20px;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    margin: 0;
+    padding: 4px;
+    line-height: 26px;
 }
