--- a/chrome/src/styles/popup.css
+++ b/chrome/src/styles/popup.css
@@ -4,10 +4,15 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 5px;
 }
 
+.capture {
+    display: flex;
+    align-items: center;
+}
 
 .keybinding {
     color: #666;
@@ -15,4 +20,13 @@ body {
     vertical-align: middle;
     line-height: 14px;
     padding: 0 10px;
+}
+
+.open-showcase {
+    margin-top: 12px;
+    text-align: center;
+}
+
+.open-showcase a {
+    text-decoration: none;
 }
