--- a/chrome/src/styles/app.css
+++ b/chrome/src/styles/app.css
@@ -12,15 +12,19 @@
     height: 100vh;
     background: #0000;
     z-index: 9999999;
+    cursor: pointer;
 }
 
 #dc-keybindings {
     font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-variant: normal;
     position: fixed;
     bottom: 5px;
     right: 12px;
     font-size: 26px;
-    color: #777;
+    color: #f5f5f5;
     z-index: 999999999;
     cursor: pointer;
     width: 160px;
@@ -29,10 +33,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: #0006;
+    border-radius: 8px;
 }
 
 #dc-keybindings ul {
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 
