--- a/chrome/src/styles/popup.css
+++ b/chrome/src/styles/popup.css
@@ -53,7 +53,15 @@ body {
 }
 
 .options .row .description {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+}
+
+.options .row .description img {
+    width: 17px;
+    height: 17px;
+    display: block;
+    margin-right: 8px;
 }
 
 
